--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <script>
   const questions = [
     {
-      text: "Heyyyy, real talk — do you like me? 🤔",
+      text: "Heyyyy, sireeyyyyy — do you like me? 🤔",
       options: [
         { text: "Yasss, duh! 😍", next: 1 },
         { text: "100% Absolutely Yes! 🔥", next: 1 }
